--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1834,3 +1834,13 @@
 "whatsnew_driving_style_title" = "Новый автомобильный стиль карт";
 
 "whatsnew_driving_style_message" = "Режим автомобильной навигации стал удобнее.";
+
+"more_on_bookingcom" = "Больше на Booking.com";
+
+"details_on_bookingcom" = "Подробней на Booking.com";
+
+"reviews_on_bookingcom" = "Больше отзывов на Booking.com";
+
+"offline_place_page_more_information" = "Подключитесь к интернету, чтобы получить больше информации о месте.";
+
+"failed_load_information" = "Не удалось загрузить информацию.";
