--- a/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
@@ -1834,3 +1834,13 @@
 "whatsnew_driving_style_title" = "แผนที่รูปแบบใหม่สำหรับการขับขี่";
 
 "whatsnew_driving_style_message" = "โหมดการนำทางรถยนต์ใช้งานได้ง่ายยิ่งขึ้น";
+
+"more_on_bookingcom" = "More on Booking.com";
+
+"details_on_bookingcom" = "Details on Booking.com";
+
+"reviews_on_bookingcom" = "More reviews on Booking.com";
+
+"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+
+"failed_load_information" = "Failed to load information.";
